8.3.8 (21-06-2022)
- Bug Fix: Fix condition in check rules for requirement of TuitionInstallmentTariff fixedAmount
- Bug Fix: Check if TuitionPaymentPlan.customizedName is not null before filling it in TuitionPaymentPlanBean
- Bug Fix: Intialize map between condition and values in TuitionPaymentPlanBean

8.3.7 (18-06-2022)
- Bug Fix: Return degreeCode for AcademicTreasuryEvent, for standaloneTuition, extracurricularTuition, improvementTuition and customAcademicDebt

8.3.6 (02-06-2022)
- Refactor: Return code of PersonCustomer from Customer::getCode instead of externalId

8.3.5 (17-05-2022)
- Bug Fix: Fix personal email field in debt report

8.3.4 (02-05-2022)
- Improvement: Add reimbursement state in reimbursements report
- Improvement: Add more fields to treasury exemption reports
- Improvement: Report debt account with customer code
- Bug Fix: Allow parametrization of tuition payment plans in one finantial entity, given degree curricular plan and execution year
- Bug Fix: Remove erroneous and misleading method TuitionPaymentPlan::finantialEntity. TuitionPaymentPlan already associates to Finantial Entity

8.3.3 (22-04-2022)
- Bug Fix: Use VAT find with current dateTime, instead of the debt date

8.3.2 (13-04-2022)
- Refactor: Read label from bundle in static block, to catch and print any errors that might occur (#UL-FC-3159)
- Refactor: Declare method to get Customer::code attribute from PersonCustomer. This method is just to check that codes are set right 

8.3.1 (17-03-2022)
- Bug Fix: Throw exception with the error description, when a value cannot be translated in tuition payment plan rule condition

8.3.0 (16-03-2022)
- Refactor: Mark ExemptionsGenerationRowResult::exemptedAmount as deprecated and replace with ExemptionsGenerationRowResult::netExemptedAmount
- Improvement: Global setting to enable/disable academic debt generation rules periodic execution